--- a/frontend/workflow/src/app/user/sign-up/sign-up.component.html
+++ b/frontend/workflow/src/app/user/sign-up/sign-up.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    
     <div class="box">
         <img src="../../assets/img/logo.png" alt="" srcset="" class="logo">
         <h3>Sign Up to Easy Flow</h3>
@@ -27,6 +28,12 @@
         <div class="error">
             {{message}}
         </div>
+        <br>
+        <div class="row">
+            <div class="col-md-12">
+                <a href="">You have account?</a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-12">
                 <button class="btn btn-primary btn1" (click)="login()">
@@ -34,13 +41,14 @@
                 </button>
             </div>
         </div>
+
         <hr>
         <h5>or</h5>
         <div class="row">
             <div class="col-md-12">
                 <button class="btn btn-primary btn2">
                     <i class="bx bxl"><img src="../../assets/img/google_icon.png" alt="" srcset="" class="icon"></i>
-                    <!-- <i class='bx bxl-google' style="float: left; margin-left: 10px;margin-top: 5px;"></i> -->
+                    <i class='bx bxl-google' style="float: left; margin-left: 10px;margin-top: 5px;"></i>
                     Continue with google
                 </button>
             </div>
