--- a/frontend/workflow/src/app/pwelcome/pwelcome.component.html
+++ b/frontend/workflow/src/app/pwelcome/pwelcome.component.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="navbar">
     <img src="../assets/img/logo.png"  >
     <div class="button">
@@ -8,8 +9,8 @@
 </div>
 </div>
     
-
 <div class="container">
+
     
     <div class="img">
         <img src="../assets/img/opera.png">
@@ -19,9 +20,22 @@
     </div>
     
         <div class="form">
-            <img id="img1" src="../assets/img/img1.jpg" >
-            <img id="img2"  src="../assets/img/img2.jpg" >
-            <img id="img3"  src="../assets/img/img3.jpg" >
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-6"><img id="img1" src="../assets/img/img1.jpg" ></div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-4"><img id="img2"  src="../assets/img/img2.jpg" ></div>
+               
+                <div class="col-md-4">  <img id="img3"  src="../assets/img/img3.jpg" ></div>
+            </div>
+
+
+
+            
+            
+          
 
             <form >
                
@@ -34,4 +48,6 @@
 
 
 <img src="../assets/img/flesh.png"  id ="imf">
+
 </div>
+<app-footer></app-footer>
