--- a/frontend/workflow/src/app/navbar/navbar.component.css
+++ b/frontend/workflow/src/app/navbar/navbar.component.css
@@ -6,5 +6,13 @@
     background-color: #50A1FF;
     border-radius: 4px;
     text-align: center;
-    padding:5px
+    padding:1px;
+    margin: 3px;
+    width:100px;
+}
+.list{
+    margin-right :20px;
+    box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.31);
+-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.31);
+-moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.31);
 }
