--- a/frontend/workflow/src/app/navbar/navbar.component.css
+++ b/frontend/workflow/src/app/navbar/navbar.component.css
@@ -9,7 +9,19 @@
     padding:1px;
     margin: 3px;
     width:100px;
+    color: white;
 }
+.item:hover{
+    background-color: white;
+    
+}
+.li{
+    color: rgb(255, 255, 255); 
+ }
+.li:hover{
+   color: black; 
+}
+
 .list{
     margin-right :20px;
     box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.31);
