--- a/frontend/workflow/src/app/navbar/navbar.component.html
+++ b/frontend/workflow/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg  bg-primary">
 
     <div class="navbar-brand" href="#">
         <img src="../../assets/img/logo_light.png" alt="" srcset="" class="logo">
@@ -10,33 +10,33 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+            <li class="nav-item active item " >
+                <a class="nav-link li" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active item">
+                <a class="nav-link li" href="#">Workflows</a>
+            </li>
             <li class="nav-item active item" >
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link li" href="#">items<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active item">
-                <a class="nav-link" href="#">Workflows</a>
-            </li>
-            <li class="nav-item active item" >
-                <a class="nav-link" href="#">items<span class="sr-only">(current)</span></a>
+                <a class="nav-link li" href="#">Groups</a>
             </li>
             <li class="nav-item active item">
-                <a class="nav-link" href="#">Groups</a>
+                <a class="nav-link li" href="#">Reports</a>
             </li>
             <li class="nav-item active item">
-                <a class="nav-link" href="#">Reports</a>
-            </li>
-            <li class="nav-item active item">
-                <a class="nav-link" href="#">Demandes</a>
+                <a class="nav-link li" href="#">Demandes</a>
             </li>
 
 
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <ul class="navbar-nav lg-auto">
-                <li class="nav-item dropdown" style="margin-right :20px;">
+                <li class="nav-item dropdown " style="margin-right :20px;">
                     
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                        aria-haspopup="true" aria-expanded="false" style="color: white;">
                         <i class='bx bxs-user-circle'></i>
                             Wilbert Bailey
                     </a>
