add page list admin

--- a/frontend/workflow/src/app/superAdmin/ajouter-admin/ajouter-admin.component.html
+++ b/frontend/workflow/src/app/superAdmin/ajouter-admin/ajouter-admin.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="d-flex flex-row-reverse bd-highlight">
-    <button id="btn"   class="btn btn-outline-primary"><i class='bx bxs-user-plus'></i> Liste Admin</button>
+    <button id="btn"   class="btn btn-outline-primary" routerLink="/liste_admin"><i class='bx bxs-user-plus'></i> Liste Admin</button>
     </div>
     <div class="box">
         <img src="../../assets/img/logo.png" alt="" srcset="" class="logo">
