--- a/frontend/workflow/src/app/superAdmin/list-admin/list-admin.component.css
+++ b/frontend/workflow/src/app/superAdmin/list-admin/list-admin.component.css
@@ -1,15 +1,18 @@
 
 .row{
-    margin-top:5%;
+    margin-top:2%;
 }
 .list{
 
-    padding:5%;
+    padding:2%;
 }
-
+.card{
+    width: 15rem;
+}
 .card-img{
     padding: 5%;
 }
+
 p{
    font-size:25px;
   font-weight: bold;
@@ -17,3 +20,42 @@ p{
 button{
     margin-top:2%;
 }
+
+
+
+
+@media screen and (max-width: 991px) {
+    
+   .card{
+       width:10rem;
+   }
+}
+
+@media screen and (max-width: 767px) {
+    
+    .card{
+        width:20rem;
+    }
+    .row{
+       
+        margin-top:2%;
+    }
+ }
+ @media screen and (max-width: 393px) {
+    
+    .card{
+        width:18rem;
+    }
+   
+ }
+
+ @media screen and (max-width: 356px) {
+    
+    .row{
+      
+        margin-top:2%;
+    }
+   
+ }
+
+
