--- a/frontend/workflow/src/app/superAdmin/list-admin/list-admin.component.html
+++ b/frontend/workflow/src/app/superAdmin/list-admin/list-admin.component.html
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-md-3">
       
-        <div class="card" style="width: 15rem;">
+        <div class="card" >
           <div class="card-img">
             <img src="../assets/img/photo_profil.jpg" class="card-img-top" >
           </div>
@@ -29,7 +29,7 @@
             <div class="card-body-buttom">
               <div class="row">
                 <div class="col">
-                  <button class="btn btn-outline-primary">Consult</button>
+                  <button class="btn btn-outline-primary" id="btn1">Consult</button>
                 </div>
                 <div class="col">
                   <button class="btn btn-primary"> execlude</button>
@@ -44,7 +44,7 @@
       </div>
       <div class="col-md-3">
       
-        <div class="card" style="width: 15rem;">
+        <div class="card">
           <div class="card-img">
             <img src="../assets/img/photo_profil.jpg" class="card-img-top" >
           </div>
@@ -69,7 +69,7 @@
       </div>
       <div class="col-md-3">
       
-        <div class="card" style="width: 15rem;">
+        <div class="card" >
           <div class="card-img">
             <img src="../assets/img/photo_profil.jpg" class="card-img-top" >
           </div>
@@ -93,7 +93,7 @@
       </div>
       <div class="col-md-3">
       
-        <div class="card" style="width: 15rem;">
+        <div class="card" >
           <div class="card-img">
             <img src="../assets/img/photo_profil.jpg" class="card-img-top" >
           </div>
