page profil user

--- a/frontend/workflow/src/app/superAdmin/list-admin/list-admin.component.html
+++ b/frontend/workflow/src/app/superAdmin/list-admin/list-admin.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
   <div class="d-flex justify-content-end">
-  <button class="btn btn-outline-primary"> Add Admin</button>
+  <button class="btn btn-outline-primary" routerLink="/ajouter_admin"> Add Admin</button>
   </div>
   <div class="list">
     <div class="list-nav">
