--- a/frontend/workflow/src/app/navbar/navbar.component.html
+++ b/frontend/workflow/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active item " >
-                <a class="nav-link li" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link li" routerLink="/Home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active item">
                 <a class="nav-link li" href="#">Workflows</a>
