--- a/frontend/workflow/src/app/superAdmin/ajouter-admin/ajouter-admin.component.html
+++ b/frontend/workflow/src/app/superAdmin/ajouter-admin/ajouter-admin.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="box">
         <img src="../../assets/img/logo.png" alt="" srcset="" class="logo">
-        <h3>Sign Up to Easy Flow</h3>
+        <h3>Add Admin</h3>
         <div class="row">
             <div class="col-md-12">
                 <input type="email" placeholder="Email" name="email" [(ngModel)]="form.email" [class.test]="test1">
