--- a/frontend/workflow/src/app/home/home.component.html
+++ b/frontend/workflow/src/app/home/home.component.html
@@ -32,7 +32,7 @@
             <div class="work">
                 <div class="row">
                     <div class="col-9">
-                        <p class="titre">Projet web</p>
+                        <h6 class="titre">Projet web</h6>
                     </div>
                     <div class="col-3">
                         <img src="../../assets/img/work.png" alt="" srcset="" class="logo">
@@ -44,7 +44,7 @@
             <div class="work">
                 <div class="row">
                     <div class="col-9">
-                        <p class="titre">Request</p>
+                        <h6 class="titre">Request</h6>
                     </div>
                     <div class="col-3">
                         <img src="../../assets/img/work.png" alt="" srcset="" class="logo">
@@ -60,7 +60,7 @@
             <div class="work">
                 <div class="row">
                     <div class="col-9">
-                        <h6 class="titre">Request</h6>
+                        <h6 class="titre">Create new workflow</h6>
                     </div>
                     <div class="col-3">
                         <img src="../../assets/img/addWork.png" alt="" srcset="" class="logo">
