--- a/frontend/workflow/src/app/navbar/navbar.component.html
+++ b/frontend/workflow/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg  bg-primary">
 
     <div class="navbar-brand" href="#">
-        <img src="../../assets/img/logo_light.png" alt="" srcset="" class="logo">
+        <img src="../../assets/img/logo_light.png" alt="" srcset="" class="logo" routerLink="/Home">
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active item " >
-                <a class="nav-link li" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link li" routerLink="/Home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active item">
                 <a class="nav-link li" href="#">Workflows</a>
