--- a/frontend/workflow/src/app/user/profil/profil.component.html
+++ b/frontend/workflow/src/app/user/profil/profil.component.html
@@ -12,11 +12,11 @@
         <div class="col-8 box">
 
             <div class="row row-cols-1 ">
-                <div class="col">Name:</div>
-                <div class="col">Email:</div>
+                <div class="col">Name: {{user.firstName}} {{user.lastName}}</div>
+                <div class="col">Email: {{user.Email}}</div>
                 <div class="col">Département:</div>
                 <div class="col">Group:</div>
-                <div class="col">Role:</div>
+                <div class="col">Role: {{user.role}}</div>
         
               </div>
         </div>
