--- a/frontend/workflow/src/app/superAdmin/ajouter-admin/ajouter-admin.component.html
+++ b/frontend/workflow/src/app/superAdmin/ajouter-admin/ajouter-admin.component.html
@@ -7,7 +7,7 @@
         <h3>Add Admin</h3>
         <div class="row">
             <div class="col-md-12">
-                <input type="email" placeholder="Email" name="email" [(ngModel)]="form.email" [class.test]="test1">
+                <input type="email" placeholder="Email" name="email" [(ngModel)]="form.Email" [class.test]="test1">
             </div>
         </div>
         <div class="error">
@@ -27,8 +27,8 @@
             <div class="col-md-12">
                 <select class="custom-select" id="inputGroupSelect01" [(ngModel)]="form.role">
                     <option selected>Choose...</option>
-                    <option value="One">One</option>
-                    <option value="Two">Two</option>
+                    <option value="admin">admin</option>
+                    <option value="user">user</option>
                     <option value="Three">Three</option>
                 </select>
             </div>
